kubernetes/kustomize/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapaderisco-unilab
  namespace: mapaderisco
spec:
  selector:
    matchLabels:
      app: mapaderisco-unilab
  template:
    metadata:
      labels:
        app: mapaderisco-unilab
    spec:
      containers:
      - name: mapaderisco-unilab
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 990m
            memory: 1024Mi
