kubernetes/kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapaderisco-unilab
spec:
  rules:
  - host: mapaderisco.unilab.edu.br
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mapaderisco-unilab
            port:
              number: 80
